[package]
name = "bingping"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
socket2 = "0.5.6"
pnet = "0.34.0"
pnet_packet = "0.34.0"
dns-lookup = "2.0.4"
rand = "0.8.5"
chrono = "0.4.34"
crossbeam-channel = "0.5.11"
anyhow = "1.0.79"
ctrlc = "3.4.2"
